--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": false,
   "description": "A solution to Frontend Mentor's Tip Calculator App challenge",
   "author": "akpekig",
+  "homepage": "https://akpekig.github.io/rock-paper-scissors-lizard-spock/",
   "engines": {
     "node": ">=16"
   },
@@ -15,7 +16,9 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "predeploy": "npm run build-only",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "pinia": "^2.0.36",
@@ -35,6 +38,7 @@
     "@vueuse/core": "^10.1.2",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
+    "gh-pages": "^5.0.0",
     "jsdom": "^22.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.24",
@@ -50,6 +54,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/akpekig/rock-paper-scissors-lizard-spock"
+    "url": "git@github.com:akpekig/rock-paper-scissors-lizard-spock.git"
   }
 }
